# mac-led-tray

./: .sparkle_public_key  Cargo.toml  Makefile  appcast.xml  build.rs
scripts/: bundle.sh  dmg.sh  release.sh
src/: main.rs  sparkle.rs
